--- a/playground.ipynb
+++ b/playground.ipynb
@@ -68,7 +68,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kerjakan Study Drill 3) di sini\n"
+    "# Kerjakan Study Drill 3) di sini\n",
+    "#mem-print sebuah variabel\n",
+    "print(\"I will now count my chickens:\")\n",
+    "\n",
+    "print(\"Hens\", 25 + 30 / 6)\n",
+    "print(\"Roosters\", 100 -25 * 3 % 4)\n",
+    "\n",
+    "print(\"Now I will count the eggs:\")\n",
+    "\n",
+    "print(3 + 2 + 1 - 5 + 4 % 2 - 1 / 4 + 6)\n",
+    "\n",
+    "print(\"Is it true that 3 + 2 < 5 - 7?\")\n",
+    "\n",
+    "print(3 + 2 < 5 - 7)\n",
+    "\n",
+    "print(\"What is 3 + 2?\", 3 + 2)\n",
+    "\n",
+    "print(\"What is 5 - 7?\", 5 - 7)\n",
+    "\n",
+    "print(\"Oh, that's why it's False.\")\n",
+    "\n",
+    "print(\"How about some more.\")\n",
+    "\n",
+    "print(\"Is it greater?\", 5 > -2)\n",
+    "print(\"Is it greater or equal?\", 5 >= -2)\n",
+    "print(\"Is it less or equal?\", 5 <= -2)"
    ]
   },
   {
@@ -81,9 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 100 cars available.\n",
+      "There are only 30 drivers available.\n",
+      "There will be 70 empty cars today.\n",
+      "We can transport 120.0 people today.\n",
+      "We have 90 to carpool today.\n",
+      "We need to put about 3.0 in each car.\n"
+     ]
+    }
+   ],
    "source": [
     "cars = 100\n",
     "space_in_a_car = 4.0\n",
@@ -104,20 +142,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 100 cars available.\n",
+      "There are only 30 drivers available.\n",
+      "There will be 70 empty cars today.\n",
+      "We can transport 120.0 people today.\n",
+      "We have 90 to carpool today.\n",
+      "We need to put about 3.0 in each car.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan Study Drill 4) di sini\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Instruksi:\n",
-    "1. Tulis ulang kode contoh di atasnya dengan sebelumnya artikan dengan command (#)"
+    "# Kerjakan Study Drill 4) di sini\n",
+    "#membuat variabel dan menginput nilai\n",
+    "cars = 100\n",
+    "space_in_a_car = 4.0\n",
+    "drivers = 30\n",
+    "passengers = 90\n",
+    "cars_not_driven = cars - drivers\n",
+    "cars_driven = drivers\n",
+    "carpool_capacity = cars_driven * space_in_a_car\n",
+    "average_passengers_per_car = passengers / cars_driven\n",
+    "\n",
+    "#mem-print hasil pengurangan perkalian pembagian\n",
+    "print(\"There are\", cars, \"cars available.\")\n",
+    "print(\"There are only\", drivers, \"drivers available.\")\n",
+    "print(\"There will be\", cars_not_driven, \"empty cars today.\")\n",
+    "print(\"We can transport\", carpool_capacity, \"people today.\")\n",
+    "print(\"We have\", passengers, \"to carpool today.\")\n",
+    "print(\"We need to put about\", average_passengers_per_car, \"in each car.\")"
    ]
   },
   {
@@ -132,9 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius 5.0 is: 78.53981633974483\n"
+     ]
+    }
+   ],
    "source": [
     "from math import pi\n",
     "r = float(input (\"Input the radius of the circle : \"))\n",
@@ -142,10 +209,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Instruksi:\n",
+    "1. Tulis ulang kode contoh di atasnya dengan sebelumnya artikan dengan command (#)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Luas lingkaran dengan jari-jari 5.0 adalah: 78.53981633974483\n"
+     ]
+    }
+   ],
    "source": [
     "# import pi dari math library\n",
     "from math import pi\n",
@@ -167,9 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/3 + 3/7 = 23/21\n",
+      "2/3 - 3/7 = 5/21\n",
+      "2/3 * 3/7 = 2/7\n",
+      "2/3 / 3/7 = 14/9\n"
+     ]
+    }
+   ],
    "source": [
     "import fractions\n",
     "\n",
@@ -184,11 +279,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/5 + 1/2 = 11/10\n",
+      "3/5 - 1/2 = 1/10\n",
+      "3/5 * 1/2 = 3/10\n",
+      "3/5 / 1/2 = 6/5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan Study Drill 5 di sini"
+    "# Kerjakan Study Drill 5 di sini\n",
+    "#import fractions dari math library\n",
+    "import fractions\n",
+    "\n",
+    "#menginput nilai\n",
+    "f1 = fractions.Fraction(3, 5)\n",
+    "f2 = fractions.Fraction(2, 4)\n",
+    "\n",
+    "#mem-print penjumlahan pengurangan perkalian pengurangan\n",
+    "print('{} + {} = {}'.format(f1, f2, f1 + f2))\n",
+    "print('{} - {} = {}'.format(f1, f2, f1 - f2))\n",
+    "print('{} * {} = {}'.format(f1, f2, f1 * f2))\n",
+    "print('{} / {} = {}'.format(f1, f2, f1 / f2))"
    ]
   },
   {
@@ -201,9 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "luas =  6.0\n"
+     ]
+    }
+   ],
    "source": [
     "b = int(input(\"Input alas : \"))\n",
     "h = int(input(\"Input tinggi : \"))\n",
@@ -215,11 +341,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "luas =  5.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan Study Drill 6 di sini"
+    "# Kerjakan Study Drill 6 di sini\n",
+    "#membuat variabel dan menginput nilai\n",
+    "b = int(input(\"Input alas : \"))\n",
+    "h = int(input(\"Input tinggi : \"))\n",
+    "\n",
+    "#membuat variabel luas \n",
+    "luas = b*h/2\n",
+    "\n",
+    "#mem-print hasil\n",
+    "print(\"luas = \", luas)"
    ]
   },
   {
@@ -247,11 +390,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volume tabung adalah:  452.57142857142856\n",
+      "Luas permukaan tabung adalah:  377.1428571428571\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan Study Drill 7 di sini"
+    "# Kerjakan Study Drill 7 di sini\n",
+    "pi=22/7\n",
+    "tinggi = float(input('Tinggi dari Tabung: '))\n",
+    "jarijari = float(input('Jari-jari dari Tabung: '))\n",
+    "volume = pi * jarijari * jarijari * tinggi\n",
+    "lp = ((2*pi*jarijari) * tinggi) + ((pi*jarijari**2)*2)\n",
+    "print(\"Volume tabung adalah: \", volume)\n",
+    "print(\"Luas permukaan tabung adalah: \", lp)"
    ]
   },
   {
@@ -276,11 +435,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Akar pangkat dua dari 1.44 adalah : 1.2\n",
+      "Pangkat dua dari 1.44  adalah : 4.220695816996552825673328929\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan Study Drill 8 di sini"
+    "# Kerjakan Study Drill 8 di sini\n",
+    "from decimal import *\n",
+    "x = Decimal('1.44')\n",
+    "print(\"Akar pangkat dua dari\",x, \"adalah :\", x.sqrt())\n",
+    "print(\"Pangkat dua dari\",x, \" adalah :\", x.exp())"
    ]
   },
   {
@@ -293,9 +465,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Integer:\n",
+      "922\n",
+      "Apakah benar integer tersebut lebih besar dari 4^4 dan hasilnya 4 jika di-mod-kan dengan 34:\n",
+      "True\n",
+      "\n",
+      "Original Integer:\n",
+      "914\n",
+      "Apakah benar integer tersebut lebih besar dari 4^4 dan hasilnya 4 jika di-mod-kan dengan 34:\n",
+      "False\n",
+      "\n",
+      "Original Integer:\n",
+      "854\n",
+      "Apakah benar integer tersebut lebih besar dari 4^4 dan hasilnya 4 jika di-mod-kan dengan 34:\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def test(n):\n",
     "    return n % 34 == 4 and n > 4 ** 4\n",
@@ -322,11 +515,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Integer:\n",
+      "922\n",
+      "Apakah benar integer tersebut lebih besar dari 4^4 dan hasilnya 4 jika di-mod-kan dengan 34:\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Kerjakan Study Drill 9 di sini\n",
+    "def test(n):\n",
+    "    return n % 34 == 4 and n > 4 ** 4\n",
+    "\n",
+    "n = 922\n",
+    "print(\"Original Integer:\")\n",
+    "print(n)\n",
+    "print(\"Apakah benar integer tersebut lebih besar dari 4^4 dan hasilnya 4 jika di-mod-kan dengan 34:\")\n",
+    "\n",
+    "print(test(n))\n",
     "## Kalian bisa coba membuktikan dengan menghitung hasil dari 4^4 dan mod 34 dari bilangan integernya"
    ]
   },
@@ -351,11 +564,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello  aulia shabrina\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan Study Drill 10 di sini\n"
+    "# Kerjakan Study Drill 10 di sini\n",
+    "fname = input(\"Input your First Name : \")\n",
+    "lname = input(\"Input your Last Name : \")\n",
+    "print (\"Hello  \" + lname + \" \" + fname)"
    ]
   }
  ],
@@ -375,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
