--- a/Example Modul.ipynb
+++ b/Example Modul.ipynb
@@ -46,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 3 = 13\n"
+     ]
+    }
+   ],
    "source": [
     "a = 10\n",
     "b = 3\n",
@@ -104,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 % 3 = 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Operasi Modulus (%)\n",
     "hasil = a % b\n",
@@ -586,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +670,7 @@
     }
    ],
    "source": [
-    "# bitwise XOR (^)\n",
+    "# bitwise XOR (^) (true true=false, false false=false, false true=true)\n",
     "c = a ^ b\n",
     "print('nilai :',a,' , binary :',format(a,'08b'))\n",
     "print('nilai :',b,' , binary :',format(b,'08b'))\n",
@@ -758,9 +774,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Huruf 'c' ada di variabel perusahaan? True\n"
+     ]
+    }
+   ],
    "source": [
     "perusahaan = 'McKinsey'\n",
     "empat_besar = ['Arsenal', 'City', 'MU', 'Tottenham']\n",
@@ -949,9 +973,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "# string\n",
     "str1 = \"Hello\"\n",
@@ -991,15 +1023,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HAHAHAHAHAHAHAHAHAHAHAHA lucu bangetttt\n"
+     ]
+    }
+   ],
    "source": [
     "# string\n",
     "str = \"HA\"\n",
     "\n",
     "# replicate\n",
-    "result = str * 3\n",
+    "result = str * 12\n",
     "print(result, \"lucu bangetttt\")"
    ]
   },
@@ -1013,9 +1053,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "# string\n",
     "str = \"POSI 2020\"\n",
@@ -1036,15 +1084,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "# string\n",
     "str = \"Hello World\"\n",
     "\n",
     "# sub string\n",
-    "substr = str[3:5]\n",
+    "substr = str[1:2]\n",
     "print(substr)"
    ]
   },
@@ -1058,15 +1114,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HloWr\n"
+     ]
+    }
+   ],
    "source": [
     "# string\n",
     "str = \"Hello World\"\n",
     "\n",
     "# skip\n",
-    "new_str = str[0:10:2]\n",
+    "new_str = str[0:10:2] #indeks 0 sampai 10 dengan jarak 2\n",
     "print(new_str)"
    ]
   },
@@ -1080,15 +1144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dlroW olleH\n"
+     ]
+    }
+   ],
    "source": [
     "# string\n",
     "str = \"Hello World\"\n",
     "\n",
     "# reverse\n",
-    "hasil = str[::-1]\n",
+    "hasil = str[::-1] #mulai -1 dibalik\n",
     "print(hasil)"
    ]
   },
@@ -1117,9 +1189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text ini akan berbunyi beep \u0007\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Text ini akan berbunyi beep \\a\")"
    ]
@@ -1140,9 +1220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ini teks di halaman 1. \f Ini teks di halaman 2.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Ini teks di halaman 1. \\f Ini teks di halaman 2.\")"
    ]
@@ -1163,9 +1251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huruf  pada kalimat ini akan hilang\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"huruf T\\b pada kalimat ini akan hilang\")"
    ]
@@ -1268,7 +1364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4
  },
